add cors if  google chrome allowed

--- a/AJAX_Javascript/index.html
+++ b/AJAX_Javascript/index.html
@@ -9,9 +9,14 @@
 
 <body>
   <div class="ajax-box">
-      <button class="btn-ajax">
-          Send Request
-      </button>
+      <div>
+          <button class="btn-ajax">
+              Send Request
+          </button>
+          <button class="btn-cors">
+              Send CORS Request
+          </button>
+      </div>
       <div class="ajax-result">
           <p> Content of the result DIV box will be displayed by server response: </p>
           <textarea id="get_resp"></textarea>
