--- a/forms/JS-form/index.html
+++ b/forms/JS-form/index.html
@@ -9,27 +9,59 @@
 <body>
     <main class="signup-page">
         <h1 class="signup-title">Sign Up Jelly's Form</h1>
-        <form action="index.html" class="signup-form">
+        <form action="index.html" class="signup-form" id= "signup-form">
             <label for="title">Title</label>
-            <select id="title" class="invalid">
-                <option value="mr">Mr.</option>
+            <select id="title" name="title">
+                <option value = "" ></option>
+                <option value="mr" >Mr.</option>
                 <option value="ms">Ms.</option>
             </select>
             <label for="first-name">First name</label>
-            <input type="text" id="first-name" >
+            <input name="first-name" type="text" id="first-name" >
             <label for="last-name">Last name</label>
-            <input type="text" id="last-name">
+            <input name="last-name" type="text" id="last-name">
             <label for="email">E-Mail</label>
-            <input type="email" id="email" required>
+            <input name="email" type="email" id="email" required>
             <label for="password">Password</label>
-            <input type="password" id="password" required>
-            <input type="checkbox" id="agree-terms" required>
+            <input type="password" name="password" id="password" required>
+            <label for="multi-choice">Multiple choice</label>
+            <div>
+            <input type="checkbox" id="a" name="choice-a" value="a"><span>A</span>
+            <input type="checkbox" id="b" name="choice-b" value="b"><span>B</span>
+            <input type="checkbox" id="c" name="choice-c" value="c"><span>C</span>
+            </div>
+            <label for="radios">Single choice</label>
+            <div id="radios">
+                <div id="radio-item">
+                    <input type="radio" name="inputr" id="input1" value="radio1"/>
+                    <p>option1</p>
+                </div>
+                <div id="radio-item">
+                    <input type="radio" name="inputr" id="input2" value="radio2"/>
+                    <p>option2</p>
+                </div>
+                <div id="radio-item">
+                    <input type="radio" name="inputr" id="input3" value="radio3"/>
+                    <p>option3</p>
+                </div>
+           </div>
+            <input name="agreement" type="checkbox" id="agree-terms" required>
             <label for="agree-terms">Agree to
              <a href="#">Terms &amp; Conditions</a>
             </label>
-            <button type="submit" class="button" disabled>Sign Up</button>
+            <button type="submit" class="button">Sign Up</button>
         </form>
     </main>
+    <label id="radio">
+        <input type="radio" name="inputr" id="input1" value="radio1"/>option1
+    </label>
+    <label id="radio">
+        <input type="radio" name="inputr" id="input2" value="radio2"/>option2
+    </label>
+    <label id="radio">
+        <input type="radio" name="inputr" id="input3" value="radio3"/>option3
+    </label>
+    <script src="script.js"></script>
 </body>
 </html>
     
