--- a/google-search-bar/index.html
+++ b/google-search-bar/index.html
@@ -12,7 +12,13 @@
 <body>
     <div class="search-box">
         <div class="search-bar">
-            <input value="" name="search" id="search" spellcheck="true" />
+            <div class="input-box">
+                <input value="" name="search" id="input-search" spellcheck="true" />
+                <div class="input-controls">
+                    <button class="clear-btn">X</button>
+                    <div class="input-divider"></div>
+                </div>
+            </div>
             <button id="search-btn"><img src="./images/searchIcon.svg" alt="search svg icon" /></button>
         </div>
         <div class="dropdown-container">
