ARIA-tabs added

--- a/ARIA-Tabs/vertical-tabs/index.html
+++ b/ARIA-Tabs/vertical-tabs/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Choose your drink here:</h1>
+    <h1>Vertical ARIA Tabs</h1>
     <div class="tabs">
         <div role="tablist" aria-label="drinks" aria-orientation="vertical">
             <button role="tab" aria-selected="true" aria-controls="coffee-tab" id="coffee">
@@ -57,6 +57,8 @@
             </p>
         </div>
     </div>
+    <br>
+    <h2>Use TAB key, then use Arrow UP/DOWN to choose.</h2>
     <script src="script.js"></script>
 </body>
 
