snake game finished

--- a/js-snake-game/index.html
+++ b/js-snake-game/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <button class="start-game-btn" onclick="startGame()">start game</button>
-    <button class="stop-game-btn" onclick="stopGame()">stop game</button>
+    <button class="stop-game-btn" onclick="pauseGame()">pause game</button>
+    <button class="resume-game-btn" onclick="resumeGame()">resume game</button>
     <p class="end-game"></p>
     <div id="board"></div>
 
