update throttle and js-form

--- a/forms/JS-form/index.html
+++ b/forms/JS-form/index.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
     <main class="signup-page">
-        <h1 class="signup-title">Sign Up Jelly's Form</h1>
-        <form action="index.html" class="signup-form" id= "signup-form">
-            <label for="title">Title</label>
-            <select id="title" name="title">
-                <option value = "" ></option>
-                <option value="mr" >Mr.</option>
-                <option value="ms">Ms.</option>
-            </select>
-            <label for="first-name">First name</label>
-            <input name="first-name" type="text" id="first-name" >
-            <label for="last-name">Last name</label>
-            <input name="last-name" type="text" id="last-name">
-            <label for="email">E-Mail</label>
-            <input name="email" type="email" id="email" required>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" required>
-            <label for="multi-choice">Multiple choice</label>
-            <div>
-            <input type="checkbox" id="a" name="choice-a" value="a"><span>A</span>
-            <input type="checkbox" id="b" name="choice-b" value="b"><span>B</span>
-            <input type="checkbox" id="c" name="choice-c" value="c"><span>C</span>
-            </div>
-            <label for="radios">Single choice</label>
-            <div id="radios">
-                <div id="radio-item">
-                    <input type="radio" name="inputr" id="input1" value="radio1"/>
-                    <p>option1</p>
-                </div>
-                <div id="radio-item">
-                    <input type="radio" name="inputr" id="input2" value="radio2"/>
-                    <p>option2</p>
-                </div>
-                <div id="radio-item">
-                    <input type="radio" name="inputr" id="input3" value="radio3"/>
-                    <p>option3</p>
-                </div>
-           </div>
-            <input name="agreement" type="checkbox" id="agree-terms" required>
-            <label for="agree-terms">Agree to
-             <a href="#">Terms &amp; Conditions</a>
-            </label>
-            <button type="submit" class="button">Sign Up</button>
-        </form>
+      <h1 class="signup-title">Sign Up Jelly's Form</h1>
+      <form action="index.html" class="signup-form" id="signup-form">
+        <label for="title">Title</label>
+        <select id="title" name="title">
+          <option value=""></option>
+          <option value="mr">Mr.</option>
+          <option value="ms">Ms.</option>
+        </select>
+        <label for="first-name">First name</label>
+        <input name="first-name" type="text" id="first-name" />
+        <label for="last-name">Last name</label>
+        <input name="last-name" type="text" id="last-name" />
+        <label for="email">E-Mail</label>
+        <input name="email" type="email" id="email" required />
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" required />
+        <label for="multi-choice">Multiple choice</label>
+        <div>
+          <input type="checkbox" id="a" name="choice-a" value="a" /><span
+            >A</span
+          >
+          <input type="checkbox" id="b" name="choice-b" value="b" /><span
+            >B</span
+          >
+          <input type="checkbox" id="c" name="choice-c" value="c" /><span
+            >C</span
+          >
+        </div>
+        <label for="radios">Single choice</label>
+        <div id="radios">
+          <div id="radio-item">
+            <input type="radio" name="inputr" id="input1" value="radio1" />
+            <p>option1</p>
+          </div>
+          <div id="radio-item">
+            <input type="radio" name="inputr" id="input2" value="radio2" />
+            <p>option2</p>
+          </div>
+          <div id="radio-item">
+            <input type="radio" name="inputr" id="input3" value="radio3" />
+            <p>option3</p>
+          </div>
+        </div>
+        <input name="agreement" type="checkbox" id="agree-terms" required />
+        <label for="agree-terms"
+          >Agree to
+          <a href="#">Terms &amp; Conditions</a>
+        </label>
+        <button type="submit" class="button">Sign Up</button>
+      </form>
     </main>
-    <label id="radio">
+    <!-- <label id="radio">
         <input type="radio" name="inputr" id="input1" value="radio1"/>option1
     </label>
     <label id="radio">
@@ -60,8 +67,7 @@
     </label>
     <label id="radio">
         <input type="radio" name="inputr" id="input3" value="radio3"/>option3
-    </label>
+    </label> -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
-    
